# m365-copilot-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: m365-copilot-mcp-spec.md
src/m365_copilot/: __init__.py  auth.py  conversation.py  server.py
src/m365_copilot/clients/: __init__.py  base.py  chat.py  meetings.py  retrieval.py  search.py
tests/: __init__.py  test_auth.py  test_conversation.py  test_server.py
tests/clients/: __init__.py  test_chat.py  test_meetings.py  test_retrieval.py  test_search.py
